<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">A-Tale-of-Heroes</string>
    <string name="gameTitle">A Tale of Heroes</string>
    <string name="newGameButtonTxt">New game</string>
    <string name="loadGameButtonTxt">Load game</string>
    <string name="exitGameButtonTxt">Exit game</string>
    <string name="labelName">Name:</string>
    <string name="labelPassoword">Password:</string>
    <string name="loginButtonText">Login</string>
    <string name="serviceLabelText">Service</string>
    <string name="attackButtonText">Attack</string>
    <string name="DefendButtonText">Defend</string>
    <string name="FleeButtonText">Flee</string>
</resources>
