<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainConstraintL"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameMenu">

    <Button
        android:id="@+id/newGameButton"
        android:layout_width="139dp"
        android:layout_height="44dp"
        android:layout_marginTop="148dp"
        android:text="@string/newGameButtonTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainLabel" />

    <TextView
        android:id="@+id/mainLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/gameTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/loadGameButton"
        android:layout_width="149dp"
        android:layout_height="49dp"
        android:layout_marginTop="56dp"
        android:text="@string/loadGameButtonTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newGameButton" />

    <Button
        android:id="@+id/exitGameButton"
        android:layout_width="137dp"
        android:layout_height="49dp"
        android:layout_marginTop="56dp"
        android:text="@string/exitGameButtonTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loadGameButton" />
</android.support.constraint.ConstraintLayout>